Add routes endpoints and models
